Encounters: Separate standard dialogue with HRs
Some characters have multiple dialogue boxes in a turn, like Elnina/Lanino's "Tonight's weather is..."/"Crystal".

--- a/misc/encounters/badguys.html
+++ b/misc/encounters/badguys.html
@@ -143,14 +143,17 @@ toc:
 		<d-speaker>Susie</d-speaker>
 		<d-text>Heh,<span class="break"></span> scared?</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Susie</d-speaker>
 		<d-text>Weasel<span class="break"></span> out of<span class="break"></span> THIS!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Susie</d-speaker>
 		<d-text>Talk your<span class="break"></span> way out of<span class="break"></span> THIS!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Susie</d-speaker>
 		<d-text>Think<span class="break"></span> fast!</d-text>
@@ -161,14 +164,17 @@ toc:
 		<d-speaker>Lancer</d-speaker>
 		<d-text>Hey!!<span class="break"></span> Hey Susie!!<span class="break"></span> Watch me,<span class="break"></span> watch me!!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Lancer</d-speaker>
 		<d-text>Prepare for<span class="break"></span> smashing, you<span class="break"></span> luxurious<span class="break"></span> melons!!!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Lancer</d-speaker>
 		<d-text>Horror! Pain!<span class="break"></span> The power of<span class="break"></span> REAL bad guys!<span class="break"></span> (Nice, huh?)</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Lancer</d-speaker>
 		<d-text>This bike is<span class="break"></span> fueled by<span class="break"></span> EVIL! ...and<span class="break"></span> friendship!</d-text>
