--- a/misc/encounters/bloxer.html
+++ b/misc/encounters/bloxer.html
@@ -136,14 +136,17 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-speaker>Bloxer</d-speaker>
 		<d-text>HOOH...! You<span class="break"></span> interrupted my<span class="break"></span> training...!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Bloxer</d-speaker>
 		<d-text>GOOH...! I'm<span class="break"></span> gonna knock<span class="break"></span> your block<span class="break"></span> off...!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Bloxer</d-speaker>
 		<d-text>Let's see how<span class="break"></span> you stack<span class="break"></span> up...! HIYA!!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Bloxer</d-speaker>
 		<d-text>Let me show<span class="break"></span> you my<span class="break"></span> training!<span class="break"></span> YIHA!!</d-text>
