--- a/misc/encounters/clover.html
+++ b/misc/encounters/clover.html
@@ -241,6 +241,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 			<d-text asterisk="shy">Please<span class="break"></span> ignore<span class="break"></span> them.</d-text>
 		</d-box>
 	</div>
+	<hr class="hr2">
 	<div class="boxgroup">
 		<d-box theme="battletalk">
 			<d-text asterisk="nice">Let's get<span class="break"></span> to know<span class="break"></span> you~</d-text>
@@ -252,6 +253,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 			<d-text asterisk="shy">Sorry<span class="break"></span> about<span class="break"></span> this...</d-text>
 		</d-box>
 	</div>
+	<hr class="hr2">
 	<div class="boxgroup">
 		<d-box theme="battletalk">
 			<d-text asterisk="nice">Nice<span class="break"></span> weather<span class="break"></span> today.</d-text>
@@ -263,6 +265,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 			<d-text asterisk="shy">Please<span class="break"></span> stop, you<span class="break"></span> two...</d-text>
 		</d-box>
 	</div>
+	<hr class="hr2">
 	<div class="boxgroup">
 		<d-box theme="battletalk">
 			<d-text asterisk="nice">It's my<span class="break"></span> birthday~</d-text>
