--- a/misc/encounters/cloverdojo.html
+++ b/misc/encounters/cloverdojo.html
@@ -182,6 +182,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 			<d-text asterisk="shy">Please<span class="break"></span> ignore<span class="break"></span> them.</d-text>
 		</d-box>
 	</div>
+	<hr class="hr2">
 	<div class="boxgroup">
 		<d-box theme="battletalk">
 			<d-text asterisk="nice">How well<span class="break"></span> do you<span class="break"></span> know us?</d-text>
@@ -193,6 +194,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 			<d-text asterisk="shy">Sorry<span class="break"></span> about<span class="break"></span> this...</d-text>
 		</d-box>
 	</div>
+	<hr class="hr2">
 	<div class="boxgroup">
 		<d-box theme="battletalk">
 			<d-text asterisk="nice">Nice<span class="break"></span> dojo<span class="break"></span> today.</d-text>
