--- a/misc/encounters/hathy.html
+++ b/misc/encounters/hathy.html
@@ -213,6 +213,7 @@ toc:
 		<d-speaker>Hathy</d-speaker>
 		<d-text><img src="{{ '/assets/images/story/talkhathy/0.gif' | relative_url }}" alt="A heart with a biting mouth"></d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Hathy</d-speaker>
 		<d-text><img src="{{ '/assets/images/story/talkhathy/1.gif' | relative_url }}" alt="A heart with a mouth that blows a kiss"></d-text>
