--- a/misc/encounters/headhathy.html
+++ b/misc/encounters/headhathy.html
@@ -151,6 +151,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-speaker>Head Hathy</d-speaker>
 		<d-text><img src="{{ '/assets/images/story/talkhathy/4.gif' | relative_url }}" alt="A heart with a biting mouth"></d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Head Hathy</d-speaker>
 		<d-text><img src="{{ '/assets/images/story/talkhathy/5.gif' | relative_url }}" alt="A heart that repeatedly cracks apart and fuses back together"></d-text>
