--- a/misc/encounters/jevil.html
+++ b/misc/encounters/jevil.html
@@ -509,24 +509,29 @@ toc:
 		<d-text>A CHAOS,<span class="break"></span> CHAOS!</d-text>
 	</d-box>
 	<p class="note">Accompanied by the voice line "CHAOS, CHAOS!"</p>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jevil</d-speaker>
 		<d-text>PLEASE, IT'S<span class="break"></span> JUST A<span class="break"></span> SIMPLE<span class="break"></span> CHAOS.</d-text>
 	</d-box>
 	<p class="note">Accompanied by the voice line "CHAOS, CHAOS!"</p>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jevil</d-speaker>
 		<d-text>I CAN DO<span class="break"></span> ANYTHING!!</d-text>
 	</d-box>
 	<p class="note">Accompanied by the voice line "I CAN DO ANYTHING!"</p>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jevil</d-speaker>
 		<d-text>THIS BODY<span class="break"></span> CANNOT BE<span class="break"></span> KILLED!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jevil</d-speaker>
 		<d-text>THESE<span class="break"></span> CURTAINS<span class="break"></span> ARE REALLY<span class="break"></span> ON FIRE!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jevil</d-speaker>
 		<d-text>IT'S ALL<span class="break"></span> TOO MUCH<span class="break"></span> FUN!!!</d-text>
