--- a/misc/encounters/jigsawry.html
+++ b/misc/encounters/jigsawry.html
@@ -164,14 +164,17 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>H... hurting<span class="break"></span> people is<span class="break"></span> cool..</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>P... Put up<span class="break"></span> your d-dukes,<span class="break"></span> bubbo...</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>F... Fighting?<span class="break"></span> I love<span class="break"></span> fighting...</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>I... I have<span class="break"></span> a rent<span class="break"></span> payment<span class="break"></span> to make...</d-text>
@@ -184,6 +187,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>I always<span class="break"></span> wanted a<span class="break"></span> friend just<span class="break"></span> like you.</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>We're friends<span class="break"></span> now, la la~</d-text>
@@ -196,6 +200,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>WHADDA WORLD!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>I'M TOO YOUNG<span class="break"></span> TO DIE!!!</d-text>
@@ -208,6 +213,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>BARRY!!!<span class="break"></span> THEY GOT<span class="break"></span> BARRY!!!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>BARRY!!<span class="break"></span> HANG IN<span class="break"></span> THERE BARRY!</d-text>
