--- a/misc/encounters/placeholder.html
+++ b/misc/encounters/placeholder.html
@@ -106,21 +106,25 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-text>Message</d-text>
 		<d-text>A</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Enemy</d-speaker>
 		<d-text>Message</d-text>
 		<d-text>B</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Enemy</d-speaker>
 		<d-text>Message</d-text>
 		<d-text>C</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Enemy</d-speaker>
 		<d-text>Message</d-text>
 		<d-text>D</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Enemy</d-speaker>
 		<d-text>WlyWlyWlyWly</d-text>
