--- a/misc/encounters/rabbick.html
+++ b/misc/encounters/rabbick.html
@@ -141,18 +141,22 @@ encounters 16/17/24/32; 24 is unused
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>Snitter<span class="break"></span> snatter<span class="break"></span> what's the<span class="break"></span> matter</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>Duruuuu---</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>Hop, hop</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>Meow.</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>Bunnies are<span class="break"></span> the sequel<span class="break"></span> to frogs.</d-text>
@@ -166,14 +170,17 @@ encounters 16/17/24/32; 24 is unused
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>A soft and<span class="break"></span> clean boy.</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>A refreshing<span class="break"></span> boy.</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>A sweet and<span class="break"></span> fresh girl.</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>A nice and<span class="break"></span> tidy girl.</d-text>
