--- a/misc/encounters/rudinn.html
+++ b/misc/encounters/rudinn.html
@@ -193,14 +193,17 @@ toc:
 		<d-speaker>Rudinn</d-speaker>
 		<d-text>Long live<span class="break"></span> the guy<span class="break"></span> who pays us!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn</d-speaker>
 		<d-text>Shine,<span class="break"></span> shine</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn</d-speaker>
 		<d-text>I'm just a<span class="break"></span> normal<span class="break"></span> person.</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn</d-speaker>
 		<d-text>Face my<span class="break"></span> Diamond<span class="break"></span> Cutter!</d-text>
