--- a/misc/encounters/rudinnranger.html
+++ b/misc/encounters/rudinnranger.html
@@ -125,14 +125,17 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>Long live<span class="break"></span> the king!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>Glimmer<span class="break"></span> glammor</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>Perish,<span class="break"></span> Lightners!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>I'm the,<span class="break"></span> diamond,<span class="break"></span> here's the<span class="break"></span> rough!</d-text>
@@ -265,6 +268,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>No one ever<span class="break"></span> said THAT to<span class="break"></span> me before<span class="break"></span> ...</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn Ranger</d-speaker>
 		<d-text>The King<span class="break"></span> never said<span class="break"></span> THAT to me<span class="break"></span> before...</d-text>
