Encounter template: Add S/R/N-Action

--- a/misc/encounters/0-template.html
+++ b/misc/encounters/0-template.html
@@ -66,6 +66,15 @@ toc:
       -
         id: actnamehere
         name: Act_name_here
+      -
+        id: saction
+        name: "S-Action: Act_name_here"
+      -
+        id: raction
+        name: "R-Action: Act_name_here"
+      -
+        id: naction
+        name: "N-Action: Act_name_here"
   -
     name: Items
     subheadings:
@@ -152,6 +161,60 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 <section class="d-section" id="actnamehere">
 	<h2>Act_name_here</h2>
+
+	<h3 id="actnamehere-ft">Flavor text</h3>
+	<d-box theme="battlemenu">
+		<d-text asterisk>TODO</d-text>
+	</d-box>
+	<p class="note">Name_goes_here gains 100% <span class="yellow">Mercy</span> / becomes <span class="blue">Tired</span> / is affected otherwise.</p>
+
+	<hr>
+
+	<h3 id="actnamehere-dialogue">Dialogue</h3>
+	<d-box theme="battletalk">
+		<d-speaker>Name_goes_here</d-speaker>
+		<d-text>TODO</d-text>
+	</d-box>
+</section>
+
+<section class="d-section" id="saction">
+	<h2 class="susie act">S-Action: Act_name_here</h2>
+
+	<h3 id="actnamehere-ft">Flavor text</h3>
+	<d-box theme="battlemenu">
+		<d-text asterisk>TODO</d-text>
+	</d-box>
+	<p class="note">Name_goes_here gains 100% <span class="yellow">Mercy</span> / becomes <span class="blue">Tired</span> / is affected otherwise.</p>
+
+	<hr>
+
+	<h3 id="actnamehere-dialogue">Dialogue</h3>
+	<d-box theme="battletalk">
+		<d-speaker>Name_goes_here</d-speaker>
+		<d-text>TODO</d-text>
+	</d-box>
+</section>
+
+<section class="d-section" id="raction">
+	<h2 class="ralsei act">R-Action: Act_name_here</h2>
+
+	<h3 id="actnamehere-ft">Flavor text</h3>
+	<d-box theme="battlemenu">
+		<d-text asterisk>TODO</d-text>
+	</d-box>
+	<p class="note">Name_goes_here gains 100% <span class="yellow">Mercy</span> / becomes <span class="blue">Tired</span> / is affected otherwise.</p>
+
+	<hr>
+
+	<h3 id="actnamehere-dialogue">Dialogue</h3>
+	<d-box theme="battletalk">
+		<d-speaker>Name_goes_here</d-speaker>
+		<d-text>TODO</d-text>
+	</d-box>
+</section>
+
+<section class="d-section" id="naction">
+	<h2 class="noelle act">N-Action: Act_name_here</h2>
 
 	<h3 id="actnamehere-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
