Document Ambyu-Lance encounter

--- a/misc/encounters/index.html
+++ b/misc/encounters/index.html
@@ -9,6 +9,9 @@ toc:
     id: chapter1
     name: Chapter 1
   -
+    id: chapter2
+    name: Chapter 2
+  -
     id: other
     name: Other
 
@@ -87,6 +90,25 @@ items:
           -
             url: jevil
             name: Jevil
+  -
+    id: chapter2
+    name: Chapter 2
+    sublist:
+      -
+        name: Cyber Field
+        sublist:
+          # Werewire, Tasque, Virovirokun, Sweet Cap'n Cakes
+      -
+        name: Cyber City
+        sublist:
+          # Poppup, Werewire, Maus, Spamton
+          -
+            url: ambyulance
+            name: Ambyu-Lance
+      -
+        name: Queen's Mansion
+        sublist:
+          # Swatchling, Tasque Manager, Mauswheel, Werewerewire, Spamton NEO, Queen, GIGA Queen
   -
     id: other
     name: Other
