Move encounters into root
It's too important a category to get relegated to the misc. category… significant parts of the story happen in boss encounters!!

--- a/encounters/ambyulance.html
+++ b/encounters/ambyulance.html
@@ -26,7 +26,7 @@ credits: >
 
 see_also:
   -
-    url: /misc/encounters/ch2allstars
+    url: /encounters/ch2allstars
     name: Ch2 All Stars (featuring Ambyu-Lance)
 
 toc:
