--- a/encounters/clover.html
+++ b/encounters/clover.html
@@ -26,10 +26,10 @@ credits: >
 
 see_also:
   -
-    url: /misc/encounters/cloverdojo
+    url: /encounters/cloverdojo
     name: Party Dojo - Clover encounter
   -
-    url: /misc/encounters/cloverunused
+    url: /encounters/cloverunused
     name: Unused, non-miniboss Clover variant
 
 toc:
@@ -167,7 +167,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	</d-box>
 
 	<h4 id="encounter-hathy">With Hathy</h4>
-	<p>Unused. Possibly intended for the <a href="{{ '/misc/encounters/cloverunused' | relative_url }}">non-miniboss version of Clover</a>.</p>
+	<p>Unused. Possibly intended for the <a href="{{ '/encounters/cloverunused' | relative_url }}">non-miniboss version of Clover</a>.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Clover and Hathy grew close!</d-text>
 	</d-box>
