--- a/encounters/cloverdojo.html
+++ b/encounters/cloverdojo.html
@@ -27,10 +27,10 @@ credits: >
 
 see_also:
   -
-    url: /misc/encounters/clover
+    url: /encounters/clover
     name: Original Clover encounter
   -
-    url: /misc/encounters/cloverunused
+    url: /encounters/cloverunused
     name: Unused, non-miniboss Clover variant
 
 toc:
