--- a/encounters/hathy.html
+++ b/encounters/hathy.html
@@ -173,7 +173,7 @@ toc:
 	<hr>
 
 	<h3 id="susieattack">Susie attacking (Unused)</h3>
-	<p>Got moved to the <a href="{{ '/misc/encounters/cround' | relative_url }}">C. Round</a> encounter instead.</p>
+	<p>Got moved to the <a href="{{ '/encounters/cround' | relative_url }}">C. Round</a> encounter instead.</p>
 
 	<h4>If Hathy wasn't warned</h4>
 	<p>(The part where Susie's sprite gets selected got deleted entirely, so I copied over the same sprite that gets used against C. Round.)</p>
