--- a/encounters/kround.html
+++ b/encounters/kround.html
@@ -5,14 +5,14 @@ layout: disambiguation
 
 see_also:
   -
-    url: /misc/encounters/cround
+    url: /encounters/cround
     name: C. Round encounter
 
 items:
   -
-    url: /misc/encounters/kroundgreatboard
+    url: /encounters/kroundgreatboard
     name: First K. Round encounter (on the Great Board)
   -
-    url: /misc/encounters/kroundcardcastle
+    url: /encounters/kroundcardcastle
     name: Second K. Round encounter (in Card Castle)
 ---
