--- a/encounters/kroundcardcastle.html
+++ b/encounters/kroundcardcastle.html
@@ -41,7 +41,7 @@ see_also:
     url: cround
     name: C. Round encounter
   -
-    url: /misc/encounters/kroundgreatboard
+    url: /encounters/kroundgreatboard
     name: K. Round encounter - Great Board
 
 toc:
@@ -114,7 +114,7 @@ toc:
 		<d-text asterisk>Come, knaves...! Prepareth for battle with...!</d-text>
 	</d-box>
 
-	<p class="note">Rouxls moves aside and teleports in <a href="{{ '/misc/encounters/kroundgreatboard' | relative_url }}">K. Round</a>.</p>
+	<p class="note">Rouxls moves aside and teleports in <a href="{{ '/encounters/kroundgreatboard' | relative_url }}">K. Round</a>.</p>
 
 	<d-box theme="dark">
 		<d-sprite speaker="Rouxls" emotion="0"></d-sprite>
@@ -230,7 +230,7 @@ toc:
 
 <section class="d-section" id="check">
 	<h2>Check</h2>
-	<p>Available if K. Round was not Checked in its <a href="{{ '/misc/encounters/kroundgreatboard' | relative_url }}">first encounter</a>. Otherwise, is replaced by the <a href="#checkers">Checkers</a> ACT.</p>
+	<p>Available if K. Round was not Checked in its <a href="{{ '/encounters/kroundgreatboard' | relative_url }}">first encounter</a>. Otherwise, is replaced by the <a href="#checkers">Checkers</a> ACT.</p>
 
 	<d-box theme="battlemenu">
 		<d-text asterisk>K.ROUND - AT 9 DF 3</d-text>
@@ -454,5 +454,5 @@ toc:
 		<d-text asterisk>Luck be with you. Heroes!</d-text>
 	</d-box>
 
-	<p class="note">Rouxls cuts off Ralsei; as he speaks, he exits rapidly towards the right. The party is able to proceed to the throne room, from where they can access <a href="{{ '/misc/encounters/king' | relative_url }}">the roof</a>.</p>
+	<p class="note">Rouxls cuts off Ralsei; as he speaks, he exits rapidly towards the right. The party is able to proceed to the throne room, from where they can access <a href="{{ '/encounters/king' | relative_url }}">the roof</a>.</p>
 </section>
