--- a/encounters/kroundgreatboard.html
+++ b/encounters/kroundgreatboard.html
@@ -29,7 +29,7 @@ see_also:
     url: cround
     name: C. Round encounter
   -
-    url: /misc/encounters/kroundcardcastle
+    url: /encounters/kroundcardcastle
     name: K. Round encounter - Card Castle
 
 toc:
@@ -156,7 +156,7 @@ toc:
 		<d-text asterisk>Wh... What is it!?</d-text>
 	</d-box>
 
-	<p class="note">Lancer moves out of the way for the party to proceed. The camera pans forward with them, revealing a <a href="{{ '/misc/encounters/cround' | relative_url }}">C. Round</a> standing on the second-to-last row of the Great Board.</p>
+	<p class="note">Lancer moves out of the way for the party to proceed. The camera pans forward with them, revealing a <a href="{{ '/encounters/cround' | relative_url }}">C. Round</a> standing on the second-to-last row of the Great Board.</p>
 
 	<d-box theme="dark">
 		<d-sprite speaker="Ralsei" variant="hat" emotion="8"></d-sprite>
