--- a/encounters/lancer.html
+++ b/encounters/lancer.html
@@ -5,12 +5,12 @@ layout: disambiguation
 
 items:
   -
-    url: /misc/encounters/lancervslightners
+    url: /encounters/lancervslightners
     name: First Lancer solo encounter (VS Lightners)
   -
-    url: /misc/encounters/badguys
+    url: /encounters/badguys
     name: Susie and Lancer encounter
   -
-    url: /misc/encounters/lancervssusie
+    url: /encounters/lancervssusie
     name: Second Lancer solo encounter (VS Susie)
 ---
