--- a/encounters/lancervslightners.html
+++ b/encounters/lancervslightners.html
@@ -21,10 +21,10 @@ see_also:
     url: /chapters/chapter1/castletown#badguy
     name: Pre- & post-fight cutscenes
   -
-    url: /misc/encounters/badguys
+    url: /encounters/badguys
     name: Susie and Lancer encounter
   -
-    url: /misc/encounters/lancervssusie
+    url: /encounters/lancervssusie
     name: Second Lancer solo encounter (VS Susie)
 
 toc:
