--- a/encounters/lancervssusie.html
+++ b/encounters/lancervssusie.html
@@ -18,10 +18,10 @@ see_also:
     url: /chapters/chapter1/prisonbreak#prefight
     name: Pre- & post-fight cutscenes
   -
-    url: /misc/encounters/lancervslightners
+    url: /encounters/lancervslightners
     name: First Lancer solo encounter encounter (VS Lightners)
   -
-    url: /misc/encounters/badguys
+    url: /encounters/badguys
     name: Susie and Lancer encounter
 
 toc:
