--- a/encounters/rabbick.html
+++ b/encounters/rabbick.html
@@ -96,7 +96,7 @@ encounters 16/17/24/32; 24 is unused
 	</d-box>
 
 	<h4 id="encounter-rudinn">With Rudinn</h4>
-	<p>Unused. Appears to be intended for an unimplemented encounter in the room where <a href="{{ '/misc/encounters/clover' | relative_url }}">Clover is first encountered</a>.</p>
+	<p>Unused. Appears to be intended for an unimplemented encounter in the room where <a href="{{ '/encounters/clover' | relative_url }}">Clover is first encountered</a>.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rabbick slithered in the way!</d-text>
 	</d-box>
