--- a/encounters/rudinn.html
+++ b/encounters/rudinn.html
@@ -138,7 +138,7 @@ toc:
 	</d-box>
 
 	<h4 id="encounter-rabbick">With Rabbick</h4>
-	<p>Unused. Appears to be intended for an unimplemented encounter in the room where <a href="{{ '/misc/encounters/clover' | relative_url }}">Clover is first encountered</a>.</p>
+	<p>Unused. Appears to be intended for an unimplemented encounter in the room where <a href="{{ '/encounters/clover' | relative_url }}">Clover is first encountered</a>.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rabbick slithered in the way!</d-text>
 	</d-box>
