--- a/encounters/rudinnranger.html
+++ b/encounters/rudinnranger.html
@@ -174,7 +174,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<hr>
 
 	<h3 id="convince-dialogue-unused">Unused dialogue</h3>
-	<p>Seems to be left over from <a href="{{ '/misc/encounters/rudinn#dialogue-convince' | relative_url }}">Rudinn's encounter</a>.</p>
+	<p>Seems to be left over from <a href="{{ '/encounters/rudinn#dialogue-convince' | relative_url }}">Rudinn's encounter</a>.</p>
 	<h4>First time</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Rudinn Ranger</d-speaker>
