--- a/misc/recruits.html
+++ b/misc/recruits.html
@@ -14,7 +14,7 @@ sources:
 
 see_also:
   -
-    url: /misc/encounters/
+    url: /encounters/
     name: Encounters - flavor text and dialogue
 
 toc:
