--- a/encounters/index.html
+++ b/encounters/index.html
@@ -129,7 +129,7 @@ items:
 {% for section in page.items -%}
 <section class="d-section" id="{{ section.url | default: section.id }}">
 	<h2>{{ section.name }}</h2>
-	{% assign sectionurl = "/misc/encounters/" | append: section.url -%}
+	{% assign sectionurl = "/encounters/" | append: section.url -%}
 
 	<ul>
 		{% for item in section.sublist -%}
