Use arrow brackets for substituted text instead of square brackets
Just a stylistic change to match the Deltarune Wiki

--- a/locations/cardkingdom/rouxlsshop.html
+++ b/locations/cardkingdom/rouxlsshop.html
@@ -178,7 +178,7 @@ toc:
 
 	<h3 id="considerbuy">Considering a purchase</h3>
 	<d-box theme="shopright">
-		<d-text>Buyeth for $[VALUE] ?</d-text>
+		<d-text>Buyeth for $&lt;VALUE&gt; ?</d-text>
 	</d-box>
 
 	<hr>
