DW Items: Remove [] from Shadow Crystal desc.

--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -2979,9 +2979,10 @@ toc:
 	<p>Key item. Appears as "ShadowCrystal" in-game. The Dark World equivalent of the <a href="{{ '/misc/lightitems#glass' | relative_url }}">Glass</a>.</p>
 
 	<h3>Description</h3>
+	<p>The "#" is replaced by the number of Shadow Crystals you've obtained so far.</p>
 	<d-box theme="objmenu">
 		<d-text>A sharp shadow moves like water in the hand.</d-text>
-		<d-text>You have collected [#].</d-text>
+		<d-text>You have collected #.</d-text>
 	</d-box>
 
 	<hr>
