Add ACT icons to TOC items

--- a/encounters/ambyulance.html
+++ b/encounters/ambyulance.html
@@ -80,12 +80,15 @@ toc:
         name: Check
       -
         id: avoid
+        act_icon: Susie
         name: Avoid
       -
         id: gethit
+        act_icon: Ralsei
         name: GetHit
       -
         id: hospitality
+        act_icon: Noelle
         name: Hospitality
       -
         id: saction
