--- a/encounters/badguys.html
+++ b/encounters/badguys.html
@@ -86,10 +86,13 @@ toc:
         name: Anything (on Susie)
       -
         id: sing
+        act_icon: Ralsei
         name: Sing
       -
         id: anything-lancer
-        name: Anything (on Lancer) / X-Anything
+        act_icon: [Ralsei]
+        icon_replace_mode: true
+        name: Anything (on Lancer) / ACTICON X-Anything
   -
     id: pacify
     name: Attempting to pacify Susie
