--- a/encounters/bloxer.html
+++ b/encounters/bloxer.html
@@ -72,6 +72,7 @@ toc:
             name: Rearranged incorrectly
       -
         id: rival
+        act_icon: Susie
         name: Rival
 ---
 {% comment %}
