--- a/encounters/clover.html
+++ b/encounters/clover.html
@@ -90,12 +90,15 @@ toc:
         name: Check
       -
         id: talkbday
+        act_icon: Ralsei
         name: TalkBday
       -
         id: talkboys
+        act_icon: Ralsei
         name: TalkBoys
       -
         id: talksports
+        act_icon: Ralsei
         name: TalkSports
       -
         id: talkanimals
