--- a/encounters/cloverdojo.html
+++ b/encounters/cloverdojo.html
@@ -80,6 +80,7 @@ toc:
         name: Topic
       -
         id: topiclong
+        act_icon: [Susie, Ralsei]
         name: Topic(Long)
       -
         id: saction
