--- a/encounters/cround.html
+++ b/encounters/cround.html
@@ -47,9 +47,11 @@ toc:
             name: Check
           -
             id: ft-xcompliment
+            act_icon: Susie
             name: X-Compliment
           -
             id: ft-warning
+            act_icon: Ralsei
             name: Warning
   -
     id: dialogue
