--- a/encounters/dummy.html
+++ b/encounters/dummy.html
@@ -112,6 +112,7 @@ toc:
         name: When instructed to do something else
   -
     id: hugralsei
+    act_icon: Ralsei
     name: Hug Ralsei
   -
     id: item
