--- a/encounters/hathy.html
+++ b/encounters/hathy.html
@@ -85,12 +85,15 @@ toc:
         name: Flatter
       -
         id: xflatter
+        act_icon: Ralsei
         name: X-Flatter
       -
         id: warning
+        act_icon: Ralsei
         name: Warning
       -
         id: sflatter
+        act_icon: Susie
         name: S-Flatter
   -
     name: Items
