--- a/encounters/headhathy.html
+++ b/encounters/headhathy.html
@@ -65,6 +65,7 @@ toc:
         name: Flirt
       -
         id: xflirt
+        act_icon: Susie
         name: X-Flirt
         subheadings:
           -
