--- a/encounters/jevil.html
+++ b/encounters/jevil.html
@@ -71,6 +71,7 @@ toc:
         name: Pirouette
       -
         id: ft-hypnosis
+        act_icon: [Susie, Ralsei]
         name: Hypnosis
   -
     id: dialogue
