--- a/encounters/king.html
+++ b/encounters/king.html
@@ -56,15 +56,19 @@ toc:
         name: Courage
       -
         id: talk-susie
-        name: Talk (with Susie)
+        act_icon: Susie
+        name: Talk
       -
         id: redbuster
+        act_icon: Susie
         name: Red Buster
       -
         id: talk-ralsei
-        name: Talk (with Ralsei)
+        act_icon: Ralsei
+        name: Talk
       -
         id: dualheal
+        act_icon: Ralsei
         name: Dual Heal
   -
     id: dialogue
