--- a/encounters/kroundcardcastle.html
+++ b/encounters/kroundcardcastle.html
@@ -84,7 +84,9 @@ toc:
         name: Bow
       -
         id: throw
-        name: Susie's Idea / Throw
+        act_icon: [Susie, Ralsei, Susie, Ralsei]
+        icon_replace_mode: true
+        name: ACTICON ACTICON Susie's Idea / ACTICON ACTICON Throw
   -
     id: postfight
     name: After the fight
