--- a/encounters/kroundgreatboard.html
+++ b/encounters/kroundgreatboard.html
@@ -75,9 +75,11 @@ toc:
         name: Bow
       -
         id: ft-deepbow
+        act_icon: Ralsei
         name: Deep Bow
       -
         id: ft-warning
+        act_icon: Ralsei
         name: Warning
   -
     id: postfight
