--- a/encounters/ponman.html
+++ b/encounters/ponman.html
@@ -58,9 +58,11 @@ toc:
         name: Goodnight
       -
         id: lullaby
+        act_icon: Ralsei
         name: Lullaby
       -
         id: warning
+        act_icon: Ralsei
         name: Warning
 ---
 {% comment %}
