--- a/encounters/rabbick.html
+++ b/encounters/rabbick.html
@@ -68,9 +68,11 @@ toc:
         name: Blow On
       -
         id: breathall
+        act_icon: Ralsei
         name: BreathAll
       -
         id: warning
+        act_icon: Ralsei
         name: Warning
 ---
 {% comment %}
