--- a/encounters/rudinnranger.html
+++ b/encounters/rudinnranger.html
@@ -58,6 +58,7 @@ toc:
         name: Convince
       -
         id: compliment
+        act_icon: Susie
         name: Compliment
 ---
 {% comment %}
