Add third-level HRs to "at random" sections

--- a/encounters/badguys.html
+++ b/encounters/badguys.html
@@ -196,6 +196,7 @@ toc:
 		<d-speaker>Susie</d-speaker>
 		<d-text>Hey, stop<span class="break"></span> ganging up<span class="break"></span> on him!</d-text>
 	</d-box>
+	<hr class="hr3">
 	<h4>If both Susie and Lancer have been attacked</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Susie</d-speaker>
@@ -332,6 +333,7 @@ toc:
 		<d-text asterisk>SUSIE fell asleep!</d-text>
 	</d-box>
 	<p class="note">Susie gains the (Asleep) status; she automatically wakes up after 3 enemy turns.</p>
+	<hr class="hr3">
 	<h4>If Susie was asleep</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>But SUSIE was already asleep...!</d-text>
