--- a/encounters/bloxer.html
+++ b/encounters/bloxer.html
@@ -240,14 +240,17 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	</d-box>
 	<hr class="hr2">
 	<p class="note">At random:</p>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="2"></d-sprite>
 		<d-text asterisk>Why bother training? You'll NEVER beat me.</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="2"></d-sprite>
 		<d-text asterisk>Why train? You're still 100 years too early to beat me.</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="2"></d-sprite>
 		<d-text asterisk>Training? Yeah, like I need that to beat you down.</d-text>
