--- a/encounters/hathy.html
+++ b/encounters/hathy.html
@@ -237,18 +237,22 @@ toc:
 
 	<h3 id="flatter-ft">Flavor text</h3>
 	<p class="note">At random:</p>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>You told Hathy it has cool tentacles.</d-text>
 		<d-text asterisk>It began to think about this...</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>You called Hathy a sweetheart.</d-text>
 		<d-text asterisk>It began to think about this...</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>You told Hathy its teeth look like knives.</d-text>
 		<d-text asterisk>It began to think about this...</d-text>
 	</d-box>
+	<hr class="hr2">
 	<p class="note">Hathy gains 100% <span class="yellow">Mercy</span>.</p>
 
 	<hr>
@@ -269,15 +273,18 @@ toc:
 	</d-box>
 	<hr class="hr2">
 	<p class="note">At random:</p>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Ralsei" variant="hat" emotion="0"></d-sprite>
 		<d-text asterisk>Out of anyone, I'm glad we randomly encountered all of you.</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Ralsei" variant="hat" emotion="0"></d-sprite>
 		<d-text asterisk>I'm making tea later...</d-text>
 		<d-text asterisk>Umm, would you like any?</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Ralsei" variant="hat" emotion="0"></d-sprite>
 		<d-text asterisk>We don't need EXP.</d-text>
@@ -329,14 +336,17 @@ toc:
 	</d-box>
 	<hr class="hr2">
 	<p class="note">At random:</p>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="0"></d-sprite>
 		<d-text asterisk>... came back here just to see YOU guys.</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="0"></d-sprite>
 		<d-text asterisk>... wanted to fight someone like YOU so much.</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="0"></d-sprite>
 		<d-text asterisk>... have a THING for weaklings like you.</d-text>
