--- a/encounters/jevil.html
+++ b/encounters/jevil.html
@@ -464,16 +464,19 @@ toc:
 	<h5>If Jevil is not <span class="blue">Tired</span></h5>
 	<p>If Jevil's Tiredness is less than 9.</p>
 	<p class="note">At random:</p>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei chanted something!</d-text>
 		<d-text asterisk>JEVIL's next attack weakened!</d-text>
 		<d-text asterisk>JEVIL became more TIRED!</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie spun something around!</d-text>
 		<d-text asterisk>JEVIL's next attack weakened!</d-text>
 		<d-text asterisk>JEVIL became more TIRED!</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris gazed strangely!</d-text>
 		<d-text asterisk>JEVIL's next attack weakened!</d-text>
@@ -483,16 +486,19 @@ toc:
 	<h5>If Jevil is <span class="blue">Tired</span></h5>
 	<p>If Jevil's Tiredness is 9 or higher.</p>
 	<p class="note">At random:</p>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ralsei chanted something!</d-text>
 		<d-text asterisk>JEVIL's next attack weakened!</d-text>
 		<d-text asterisk>JEVIL's looking exhausted!</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>Susie spun something around!</d-text>
 		<d-text asterisk>JEVIL's next attack weakened!</d-text>
 		<d-text asterisk>JEVIL's looking exhausted!</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris gazed strangely!</d-text>
 		<d-text asterisk>JEVIL's next attack weakened!</d-text>
