--- a/encounters/jigsawry.html
+++ b/encounters/jigsawry.html
@@ -238,21 +238,25 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	</d-box>
 	<hr class="hr2">
 	<p class="note">At random:</p>
+	<hr class="hr3">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>Of course<span class="break"></span> I'll be<span class="break"></span> your friend!</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>Alright!</d-text>
 		<d-text>You win!</d-text>
 		<d-text>Let's be<span class="break"></span> friends!</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>Friends?</d-text>
 		<d-text>I was thinking<span class="break"></span> the same<span class="break"></span> thing!</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battletalk">
 		<d-speaker>Jigsawry</d-speaker>
 		<d-text>... well,<span class="break"></span> if we HAVE<span class="break"></span> to be<span class="break"></span> friends...</d-text>
