--- a/encounters/rudinnranger.html
+++ b/encounters/rudinnranger.html
@@ -249,14 +249,17 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	</d-box>
 	<hr class="hr2">
 	<p class="note">At random:</p>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="2"></d-sprite>
 		<d-text asterisk>"Your outfit is NOT disgusting."</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="2"></d-sprite>
 		<d-text asterisk>"Please keep body tackling the soda machine."</d-text>
 	</d-box>
+	<hr class="hr3">
 	<d-box theme="battlemenu">
 		<d-sprite speaker="Susie" variant="noeyes" emotion="2"></d-sprite>
 		<d-text asterisk>Nice, you guys look like you're gonna kill me.</d-text>
