Document Poppup encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -101,7 +101,10 @@ items:
       -
         name: Cyber City
         sublist:
-          # Poppup, Werewire, Maus, Spamton
+          -
+            url: poppup
+            name: Poppup
+          # Maus, Spamton
           -
             url: ambyulance
             name: Ambyu-Lance
